--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <div class="button-text">文字</div>
                 </div>
                 <div class="Control-button">
-                    <img src="./image/Control./image.svg" width="50" height="50" alt="">
+                    <img src="./image/Control/image.svg" width="50" height="50" alt="">
                     <div class="button-text">图片</div>
                 </div>
             </div>
